--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
         <h1>GET IN TOUCH</h1>
         <form class="cf" action="https://formsubmit.co/salutomisin@gmail.com" method="POST">
           <div class="half left cf">
-            <input type="text" id="input-name" placeholder="Name">
-            <input type="email" id="input-email" placeholder="Email Address" required>
+            <input name="name" type="text" id="input-name" placeholder="Name">
+            <input name="email" type="email" id="input-email" placeholder="Email Address" required>
             <textarea name="message" type="text" id="input-message" placeholder="Message" required></textarea>
           </div>
           <input type="submit" value="Send Message" id="input-submit">
