--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <nav>
       <div class="logo-container">
         <!-- <img class="logo" src="Assets/images/TS-logo.png"/> -->
-        <a href="index.html" TOMISIN SALU>Tomisin Salu</a>
+        <a href="index.html" TOMISIN SALU>TOMISIN SALU</a>
       </div>
       <ul id="nav-list">
         <li><a href="index.html#about-me">About me</a></li>
@@ -23,14 +23,18 @@
     </nav>
     <div class="main-container">
       <div class="info-section">
+          <div>Tomisin Salu</div>
+          <div>PA | NY</div>
+          <div>salutomisin@gmail.com</div>
       </div>
       <div class="contact-section">
         <h1>GET IN TOUCH</h1>
         <form class="cf" action="https://formsubmit.co/salutomisin@gmail.com" method="POST">
           <div class="half left cf">
-            <input name="name" type="text" id="input-name" placeholder="Name">
-            <input name="email" type="email" id="input-email" placeholder="Email Address" required>
-            <textarea name="message" type="text" id="input-message" placeholder="Message" required></textarea>
+            <input name="Name" type="text" id="input-name" placeholder="Name">
+            <input name="Email" type="email" id="input-email" placeholder="Email Address" required>
+            <input name="Subject" type="text" id="input-subject" placeholder="Subject">
+            <textarea name="Message" type="text" id="input-message" placeholder="Message" required></textarea>
           </div>
           <input type="submit" value="Send Message" id="input-submit">
         </form>
