--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="Assets/contact_style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="shortcut icon" href="Assets/images/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/761e4c8e5c.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,9 +22,17 @@
     </nav>
     <div class="main-container">
       <div class="info-section">
-          <div>Tomisin Salu</div>
-          <div>PA | NY</div>
-          <div>salutomisin@gmail.com</div>
+          <div><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 7.001c0 3.865-3.134 7-7 7s-7-3.135-7-7c0-3.867 3.134-7.001 7-7.001s7 3.134 7 7.001zm-1.598 7.18c-1.506 1.137-3.374 1.82-5.402 1.82-2.03 0-3.899-.685-5.407-1.822-4.072 1.793-6.593 7.376-6.593 9.821h24c0-2.423-2.6-8.006-6.598-9.819z"/></svg>
+            <br>
+            Tomisin Salu</div>
+          <div><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24"><path d="M12 0c-4.198 0-8 3.403-8 7.602 0 6.243 6.377 6.903 8 16.398 1.623-9.495 8-10.155 8-16.398 0-4.199-3.801-7.602-8-7.602zm0 11c-1.657 0-3-1.343-3-3s1.342-3 3-3 3 1.343 3 3-1.343 3-3 3z"/></svg>
+            <br>
+            Pennsylvania, US</div>
+          <div><a href="mailto: salutomisin@gmail.com" target="_blank" rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24"><path d="M.026 24l11.974-11.607 11.974 11.607h-23.948zm11.964-23.961l-11.99 8.725v12.476l7.352-7.127-5.653-4.113 10.291-7.488 10.309 7.488-5.655 4.108 7.356 7.132v-12.476l-12.01-8.725z"/></svg>
+            <br>
+            salutomisin
+            <br>
+            @gmail.com</a></div>
       </div>
       <div class="contact-section">
         <h1>GET IN TOUCH</h1>
@@ -36,7 +43,7 @@
             <input name="Subject" type="text" id="input-subject" placeholder="Subject">
             <textarea name="Message" type="text" id="input-message" placeholder="Message" required></textarea>
           </div>
-          <input type="submit" value="Send Message" id="input-submit">
+          <input type="submit" value="Send Message >" id="input-submit"></input>
         </form>
     </div> 
 
