--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <p class="header-subtext center">Now what?</p>
             <h2>Get In Touch</h2>
             <p class="main-text">
-                My inbox is always open. Whether you have a question or just want to say hi, feel free to leave a message and I’ll be sure to get back to you as soon as possible!
+                My inbox is always open. Whether you have a question or just want to say hi, feel free to <a href="contact.html" style="border-bottom:2px solid coral;">leave a message</a> and I’ll be sure to get back to you as soon as possible!
             </p>
             <a href="contact.html">
               <div class="footer-button">
@@ -213,6 +213,5 @@
             </div>
         </div>
       </footer>
-    <script src="src/app.js"></script>
   </body>
 </html>
