--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <script src="https://kit.fontawesome.com/761e4c8e5c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Tomisin Salu Portfolio</title>
 
     
@@ -23,7 +25,7 @@
         <li><a href="contact.html">Contact Me</a></li>
       </ul>
     </nav>
-    <section class="hero" id="bg">   
+    <section class="hero bg-mountain" id="bg">   
         <div class="hero-area">
           <div class="hero-text">
               <p class="header-subtext">Welcome, my name is</p>
