--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         <div class="hero-area">
           <div class="hero-text">
               <p class="header-subtext">Welcome, my name is</p>
-              <h1 class="animated bounce">Tomisin Salu</h1>
-              <h2 class="title">Software Engineer | Web Developer</h2>
-              <div class="hero-prompts">
+              <h1 class="">TOMISIN SALU</h1>
+              <h2 class="title animate__animated animate__fadeInUp">Software Engineer | Web Developer</h2>
+              <div class="hero-prompts animate__animated animate__fadeInUp animate__delay-1s">
                 <a href="Assets/images/Tomisin Salu Resume.pdf" target="_blank" rel="noopener noreferrer">
-                  <div class="button" id="resume">View My Resume <img src="Assets/images/resume.svg" style="height:25px; align-self:center; margin:auto;" />
+                  <div class="button" id="resume">VIEW MY RESUME <img src="Assets/images/resume.svg" style="height:25px; align-self:center; margin:auto;" />
                   </div>
                 </a>
-                <a href="contact.html"><div class="button wide-button">Connect With Me <img src="Assets/images/connect.svg" style="height:25px; align-self:center; margin:auto;" /></div></a>
+                <a href="contact.html"><div class="button wide-button">CONNECT WITH ME <img src="Assets/images/connect.svg" style="height:25px; align-self:center; margin:auto;" /></div></a>
               </div>
           </div>
           <div class="socials">
@@ -59,7 +59,7 @@
             A quick rundown
           </p>
           <h2>About Me</h2>
-          <p class="main-text">
+          <p class="main-text animate__animated animate__fadeInUp ">
               Hello, my name is Tomisin. <span>I am passionate about developing software that helps make our lives less complex.</span> I am currently undergoing a <span class="highlighted-text">BS degree in Computer Science</span> at The Pennsylvania State University. 
               <br>
                 <span class="highlighted-text">I enjoy developing websites from scratch</span> using HTML, CSS and JavaScript. 
@@ -70,7 +70,7 @@
               <br>
           </p>
         </div>
-        <div class="headshot-container">
+        <div class="headshot-container animate__animated animate__fadeInUp">
             <img class="headshot" src="Assets/images/headshot1.JPG" alt="Tomisin Salu headshot"/>
         </div>
     </section>
@@ -94,11 +94,6 @@
         </div>
 
         <div>
-          <img src="Assets/images/javascript.png"/>
-          <p>Javascript</p>
-        </div>
-
-        <div>
           <img src="Assets/images/React-icon.svg.png"/>
           <p>React</p>
         </div>
@@ -111,6 +106,11 @@
         <div>
           <img src="Assets/images/java.png"/>
           <p>Java</p>
+        </div>
+
+        <div>
+          <img src="Assets/images/github.svg"/>
+          <p>Github</p>
         </div>
 
         <div>
@@ -134,7 +134,7 @@
       <p class="header-subtext">A few of my</p>
       <h2>Recent Projects</h2>
     
-      <div class="project-container">
+      <div class="project-container animate__animated animate__fadeInUp">
 
         <div class="project-card" id="website-project">
           <div class="image-container">
