--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <link rel="stylesheet" href="Assets/style.css" />
-    <link rel="shortcut icon" href="Assets/images/favicon.ico" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/761e4c8e5c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta charset="UTF-8" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" />
@@ -17,7 +16,7 @@
     <nav>
       <div class="logo-container">
         <!-- <img class="logo" src="Assets/images/TS-logo.png"/> -->
-        <a href="#">TOMISIN SALU</a>
+        <a href="https://tomisinsalu.com/">TOMISIN SALU</a>
       </div>
       <ul id="nav-list">
         <li><a href="#about-me">About Me</a></li>
@@ -25,18 +24,19 @@
         <li><a href="contact.html">Contact Me</a></li>
       </ul>
     </nav>
-    <section class="hero bg-mountain" id="bg">   
+    <section class="hero bg-bridge" id="bg">   
         <div class="hero-area">
           <div class="hero-text">
               <p class="header-subtext">Welcome, my name is</p>
               <h1 class="">TOMISIN SALU</h1>
-              <h2 class="title animate__animated animate__fadeInUp">Software Engineer | Web Developer</h2>
+              <h2 class="title animate__animated animate__fadeInUp">Software Engineer & Web Developer</h2>
               <div class="hero-prompts animate__animated animate__fadeInUp animate__delay-1s">
                 <a href="Assets/images/Tomisin Salu Resume.pdf" target="_blank" rel="noopener noreferrer">
-                  <div class="button" id="resume">VIEW MY RESUME <img src="Assets/images/resume.svg" style="height:25px; align-self:center; margin:auto;" />
+                  <div class="button" id="resume">
+                    VIEW MY RESUME
                   </div>
                 </a>
-                <a href="contact.html"><div class="button wide-button">CONNECT WITH ME <img src="Assets/images/connect.svg" style="height:25px; align-self:center; margin:auto;" /></div></a>
+                <a href="contact.html"><div class="button wide-button">CONNECT WITH ME </div></a>
               </div>
           </div>
           <div class="socials">
