--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
         <a href="https://tomisinsalu.com/">TOMISIN SALU</a>
       </div>
       <ul id="nav-list">
+        <li><a href="#">Home</a></li>
         <li><a href="#about-me">About Me</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="contact.html">Contact Me</a></li>
       </ul>
+      <div>
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-linkedin"></i>
+      </div>
     </nav>
     <section class="hero bg-bridge" id="bg">   
         <div class="hero-area">
