--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <li><a href="#contact-me">Contact Me</a></li>
       </ul>
       <div>
-        <i class="fa-brands fa-github"></i>
-        <i class="fa-brands fa-linkedin"></i>
+        <a href="https://github.com/TomisinSalu?tab=repositories" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/tomisin-salu-173327210/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
       </div>
     </nav>
     <section class="hero bg-bridge" id="bg">   
@@ -160,7 +160,7 @@
             <img class="project-image-grid" src="Assets/images/Graphic-Portfolio.jpg"/>
           </div>
           <div class="description-container-grid">
-            <p class="project-title grid">Graphic Portfolio Website</p>
+            <p class="project-title grid">Graphic Design Portfolio Website</p>
             <p class="main-text">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat voluptatum iure, ipsa minima natus temporibus magni commodi doloribus aut id. Hic dolorem quod totam culpa sit unde perspiciatis animi voluptate.
               <br>
