--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="Assets/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="ahortcut icon" type="image/png" href="Assets/images/favicon.ico" />
     <meta charset="UTF-8" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" />
@@ -82,7 +83,7 @@
         </div>
     </section>
     <section class="skills-section">
-      <p class="skill-text">Technologies:</p> 
+      <p class="skill-text">Familiar Technologies</p> 
       <div class="skills">
          
         <div>
@@ -162,7 +163,7 @@
           <div class="description-container-grid">
             <p class="project-title grid">Graphic Design Portfolio Website</p>
             <p class="main-text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat voluptatum iure, ipsa minima natus temporibus magni commodi doloribus aut id. Hic dolorem quod totam culpa sit unde perspiciatis animi voluptate.
+              A website developed to display all my graphic design ventures I have done over the years.<br>Developed with React.js and styled with SASS.
               <br>
               <a href="#">Visit Website</a>
             </p>
@@ -204,7 +205,7 @@
           <div class="description-container-grid">
             <p class="project-title grid">eBay Sniping Bot</p>
             <p class="main-text">
-              Bot that gives user 90% greater chance at winning eBay bids. This bot executes by bidding on an item at the final moments of the bid.
+              A bot that gives user 90% greater chance at winning eBay bids. This bot executes by bidding on an item at the final moments of the bid.
               <br>
               <a href="#">View Repository</a>
             </p>
