project link update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>Tomisin Salu Portfolio</title>
+    <title>Tomisin Salu</title>
 
     
   </head>
@@ -207,7 +207,7 @@
             <p class="main-text">
               A bot that gives user 90% greater chance at winning eBay bids. This bot executes by bidding on an item at the final moments of the bid.
               <br>
-              <a href="#">View Repository</a>
+              <a href="https://github.com/TomisinSalu/eBay-Sniping-Bot">View Repository</a>
             </p>
           </div>
         </div>
