--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <p class="main-text">
               A website developed to display all my graphic design ventures I have done over the years.<br>Developed with React.js and styled with SASS.
               <br>
-              <a href="#">Visit Website</a>
+              <a href="https://github.com/TomisinSalu/Graphic-Design-Portfolio-Website/tree/master" target="_blank">View Repository</a>
             </p>
           </div>
         </div>
@@ -207,7 +207,7 @@
             <p class="main-text">
               A bot that gives user 90% greater chance at winning eBay bids. This bot executes by bidding on an item at the final moments of the bid.
               <br>
-              <a href="https://github.com/TomisinSalu/eBay-Sniping-Bot">View Repository</a>
+              <a href="https://github.com/TomisinSalu/eBay-Sniping-Bot" target="_blank">View Repository</a>
             </p>
           </div>
         </div>
