--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Tomisin</title>
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVCYM3CGB0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-LVCYM3CGB0');
+    </script>
+    
   </head>
   <body src="Assets/images/contact-bg.jpg">
     <nav>
