--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=0;" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Tomisin Salu</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVCYM3CGB0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'G-LVCYM3CGB0');
+    </script>
     
   </head>
   <body>
@@ -193,7 +201,7 @@
             <p class="main-text">
               The zoom auto login program aids users to automatically log into zoom meetings at a scheduled time.
               <br>
-              <a href="#">View Repository</a>
+              <a href="https://github.com/TomisinSalu/Zoom-Auto-Login-Program/tree/master" target="_blank">View Repository</a>
             </p>
           </div>
         </div>
