--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <p class="main-text">
               A website developed to display all my graphic design ventures I have done over the years.<br>Developed with React.js and styled with SASS.
               <br>
-              <a href="https://ts-designs.myportfolio.com/" target="_blank">View Repository</a>
+              <a href="https://ts-designs.myportfolio.com/" target="_blank">Visit Website</a>
             </p>
           </div>
         </div>
