--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <h1 class="">TOMISIN SALU</h1>
               <h2 class="title animate__animated animate__fadeInUp">Software Engineer & Web Developer</h2>
               <div class="hero-prompts animate__animated animate__fadeInUp animate__delay-1s">
-                <a href="2024_Resume (4).pdf" target="_blank" rel="noopener noreferrer">
+                <a href="2024_Resume (4)" target="_blank" rel="noopener noreferrer">
                   <div class="button" id="resume">
                     VIEW MY RESUME
                   </div>
