Updated headshot image

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
     <section class="sub-section" id="about-me">
         <div class="information">
-          <p class="header-subtext">
+          <p class="header-subtext"> 
             A quick rundown
           </p>
           <h2>About Me</h2>
@@ -87,7 +87,7 @@
           </p>
         </div>
         <div class="headshot-container animate__animated animate__fadeInUp">
-            <img class="headshot" src="Assets/images/headshot1.JPG" alt="Tomisin Salu headshot"/>
+            <img class="headshot" src="Assets/images/headshot/headshot.jpg" alt="Tomisin Salu headshot"/>
         </div>
     </section>
     <section class="skills-section">
