--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </p>
         </div>
         <div class="headshot-container animate__animated animate__fadeInUp">
-            <img class="headshot" src="Assets/images/headshot/headshot.jpg" alt="Tomisin Salu headshot"/>
+            <img class="headshot zoomed-in" src="Assets/images/grad_pic.JPG" alt="Tomisin Salu headshot"/>
         </div>
     </section>
     <section class="skills-section">
