Updated About Me section

--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,7 @@
             Tomisin Salu</div>
           <div><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24"><path d="M12 0c-4.198 0-8 3.403-8 7.602 0 6.243 6.377 6.903 8 16.398 1.623-9.495 8-10.155 8-16.398 0-4.199-3.801-7.602-8-7.602zm0 11c-1.657 0-3-1.343-3-3s1.342-3 3-3 3 1.343 3 3-1.343 3-3 3z"/></svg>
             <br>
-            Pennsylvania, USA
-            New York, USA
+            Washington DC
           </div>
           <div><a href="mailto: salutomisin@gmail.com" target="_blank" rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24"><path d="M.026 24l11.974-11.607 11.974 11.607h-23.948zm11.964-23.961l-11.99 8.725v12.476l7.352-7.127-5.653-4.113 10.291-7.488 10.309 7.488-5.655 4.108 7.356 7.132v-12.476l-12.01-8.725z"/></svg>
             <br>
