--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </p>
           <h2>About Me</h2>
           <p class="main-text animate__animated animate__fadeInUp ">
-              Hey stalker, my name is Tomisin (aka Tomi). <span class="highlighted-text">I am passionate about developing software that simplifies our complex lives</span>. I acquired my <span class="highlighted-text">Bachelor’s degree in Computer Science</span> from The Pennsylvania State University
+              Hey there, my name is Tomisin (aka Tomi). <span class="highlighted-text">I am passionate about developing software that simplifies our complex lives</span>. I acquired my <span class="highlighted-text">Bachelor’s degree in Computer Science</span> from The Pennsylvania State University
               <br>
               <br>
             <span class="highlighted-text">I have a strong curiosity for learning</span> and often find myself going down rabbit holes when I discover new technologies that pique my interest. Lately, I’ve been exploring the world of cloud computing—particularly AWS—and experimenting with “vibe coding”. <a href="contact.html"><span class="highlighted-text">Hit me up</span></a> if you know anything about those :)
